# apis-instance-frischmuth

./: .gitignore  README.md  manage.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: black.yml  deploy-apis-instance.yml  gitlint.yml  ruff-formatter.yml  ruff-linter.yml
apis_ontology/: apps.py  asgi.py  filtersets.py  forms.py  importers.py  models.py  querysets.py  settings.py  signals.py  tables.py  urls.py  wsgi.py
apis_ontology/api/: filters.py  serializers.py  views.py
apis_ontology/import_related/: additional_infos.py  import_helpers.py  utils.py
apis_ontology/management/commands/: create_base_data.py  delete_source_objects.py  import_properties.py  importproperties.py  run_ontology_script.py
apis_ontology/migrations/: 0001_initial.py  0002_initial.py  0003_alter_work_data_source.py  0004_alter_work_options_remove_work_subtitle_and_more.py  0005_work_subtitle_work_title.py  0006_alter_work_options.py  0007_expression.py  0008_archive_physicalobject.py  0009_archive_data_source_physicalobject_data_source.py  0010_person_organisation.py  0011_metacharacter_character.py  0012_place.py  0013_topic_researchperspective_interpretatem.py  0014_person_description.py  0015_topic_alternative_name.py  0016_researchperspective_alternative_name.py  0017_worktype.py  0018_alter_worktype_options.py  0019_alter_archive_data_source_and_more.py  0020_alter_character_progress_status_and_more.py  0021_alter_character_progress_status_and_more.py  0022_expression_manifestation_type.py  0023_character_fictionality.py  0024_rename_year_of_publication_expression_publication_date.py  0025_alter_expression_publication_date.py  0026_rename_manifestation_type_expression_edition_type.py  0027_alter_expression_edition_type.py  0028_physicalobject_vorlass_doc_reference.py  0029_alter_work_siglum.py  0030_expression_issue.py  0031_rename_publication_date_expression_publication_date_iso.py  0032_alter_expression_publication_date_iso.py  0033_expression_publication_date.py  0034_alter_expression_publication_date_iso.py  0035_alter_expression_relevant_pages.py  0036_alter_expression_publication_date_iso.py  0037_alter_expression_publication_date.py  0038_alter_character_options_alter_expression_options_and_more.py  0039_alter_archive_description_and_more.py  0040_archive_name_interpretatem_name_metacharacter_name_and_more.py  (+47 more)
apis_ontology/rdfimport/: InstitutionFromDNB.toml  InstitutionFromWikidata.toml  OrganisationFromDNB.toml  OrganisationFromWikidata.toml  PersonFromDNB.toml  PersonFromWikidata.toml  PlaceFromGeonames.toml
apis_ontology/scripts/: README.md  access_sharepoint.py  additional_infos.py  create_base_entities.py  import_helpers.py  import_nonbibl_entities.py  import_nonbibl_entities_from_excel.py  import_vorlass_data.py  import_xml.py  import_zotero_collections.py  sharepoint_download_helpers.py  utils.py
apis_ontology/static/css/: core.css
apis_ontology/templates/apis_core/apis_entities/: abstractentity_form.html
apis_ontology/templates/apis_ontology/: generic_external_autocomplete_result.html  place_autocomplete_result.html  place_external_autocomplete_result.html
apis_ontology/templates/apis_ontology/partials/: place_map_icon.html
apis_ontology/templates/generic/: generic_autocomplete_result.html
data/: properties.json
