[tool.poetry]
name = "apis-instance-frischmuth"
version = "0.1.0"
description = "APIS instance for Frischmuth project"
authors = ["KK <dev-kk@oeaw.ac.at>"]
license = "MIT"
packages = [{include = "apis_ontology"}]

[tool.poetry.dependencies]
python = "^3.11"
apis-acdhch-default-settings = "v0.1.18"
apis-core = {git = "https://github.com/acdh-oeaw/apis-core-rdf", rev = "v0.8.1"}
Django = "^4.2.7"
django-extensions = "^3.2.3"
django-multiselectfield = "^0.1.12"
mysqlclient = "^2.2.0"
openpyxl = "^3.1.2"
psycopg = "^3.1.12"
pyzotero = "^1.5.18"
sharepy = "^2.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
djlint = "^1.34.0"
pylint = "^3.0.2"
ruff = "^0.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
