[tool.poetry]
name = "apis-instance-frischmuth"
version = "0.2.0"
description = "Digitales Archiv Barbara Frischmuth"
authors = [
    "K Kollmann <dev-kk@oeaw.ac.at>",
    "Barbara Krautgartner <barbara.krautgartner@oeaw.ac.at>"
]
license = "MIT"
repository = "https://github.com/acdh-oeaw/apis-instance-frischmuth"
packages = [{include = "apis_ontology"}]

[tool.poetry.dependencies]
python = "^3.11"
apis-acdhch-default-settings = "v1.1.0"
apis-core = {git = "https://github.com/acdh-oeaw/apis-core-rdf", rev = "v0.25.0"}
dateparser = "^1.2.0"
Django = "^4.2.7"
django-cors-headers = "^4.3.1"
django-extensions = "^3.2.3"
django-multiselectfield = "^0.1.12"
mysqlclient = "^2.2.0"
openpyxl = "^3.1.2"
pandas = "^2.1.4"
psycopg = "^3.1.12"
pyzotero = "^1.5.18"
sharepy = "^2.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.5"
djlint = "^1.34.0"
pylint = "^3.0.2"
ruff = ">=0.2.1,<0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.djlint]
indent=2
profile="django"
extension="html"
blank_line_before_tag="block,if"
blank_line_after_tag="endif,endblock"
format_js=false

[tool.ruff]
src = ["apis_ontology"]

[tool.ruff.lint]
select = ["F", "E", "W", "I", "N"]
# Ignore (some) selected rules based on Ruff recommendation:
# https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
ignore = ["E501", "F403", "W191", "E111", "E114", "E117"]

[tool.ruff.lint.isort]
known-first-party = ["apis_ontology"]
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"**/settings.py" = ["F405"]
"**/migrations/*" = ["I001"]
